--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@
 }
 
 :root {
+    --light-bg: #cfd7d9;
+    --calc-bg: #ffffff;
+    --calc-border: #3b476e;
+    --equal-bg: #64a6f1;
+    --pr-text-color: #0d101a;
+    --sc-text-color: #43495c;
+    --clear-all-bg: #da2d2d;
+    --clear-cur-bg: #da562f;
+
     --lavender-light: #E7E6F7;
     --lavender-dark: #C6D2ED;
     --purple-pale: #E3D0D8;
@@ -14,8 +23,9 @@
     --space-1: 8px;
     --space-2: 16px;
 
-    --font-s-1: 16px;
-    --font-s-2: 24px;
+    --font-s-1: 12px;
+    --font-s-2: 16px;
+    --font-s-3: 24px;
 
     /* --lighter: #FEFEFA;
     --light: #FFFFF0;
@@ -28,26 +38,41 @@ html {
 }
 
 body {
-    background-color: var(--purple-pale);
+    background-color: var(--light-bg);
 }
 
 button {
     font-family: inherit;
-    font-size: var(--font-s-1);
+    font-size: var(--font-s-2);
     font-weight: 700;
 
-    background-color: var(--purple-pale);
-    color: var(--pink-dark);
+    background-color: var(--calc-bg);
+    color: var(--pr-text-color);
 
-    border: 1px solid var(--pink-dark);
+    border: 1px solid var(--calc-border);
     border-radius: 4px;
 
-    min-width: 3rem;
-    height: 3rem;
+    min-width: 3.6rem;
+    height: 3.6rem;
+
+    transition: 100ms ease;
+}
+
+button.equal {
+    background-color: var(--equal-bg);
+}
+
+button.clear-all {
+    background-color: var(--clear-all-bg);
+}
+
+button.clear-current {
+    background-color: var(--clear-cur-bg);
 }
 
 button:hover {
     transform: scale(1.05);
+    box-shadow: 0 0 4px 1px #999999;
 }
 
 button:active {
@@ -62,9 +87,10 @@ button:active {
 }
 
 .container {
-    background-color: var(--rose-quartz);
-    border: 1px solid var(--pink-dark);
+    background-color: var(--calc-bg);
+    border: 1px solid var(--calc-border);
     border-radius: 4px;
+    box-shadow: 0 0 16px 1px #444444;
     padding: var(--space-1);
     display: flex;
     flex-direction: column;
@@ -72,31 +98,22 @@ button:active {
 }
 
 .display {
-    width: 100%;
-    min-height: 3rem;
-
-    color: var(--pink-dark);
-    background-color: var(--lavender-light);
-
-    border: 1px solid var(--lavender-dark);
-    border-radius: 4px;
-
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-
-    padding: calc(var(--space-1) / 2);
 }
 
 .last-operation {
+    min-height: 1rem;
     font-family: inherit;
     font-size: var(--font-s-1);
-    font-weight: 300;
+    font-weight: 200;
+    color: var(--sc-text-color);
 }
 
 .current-input {
     font-family: inherit;
-    font-size: var(--font-s-2);
+    font-size: var(--font-s-3);
     font-weight: 700;
 }
 
