Fixed some bugs

--- a/style.css
+++ b/style.css
@@ -8,17 +8,22 @@
     --light-bg: #cfd7d9;
     --calc-bg: #ffffff;
     --calc-border: #3b476e;
-    --equal-bg: #64a6f1;
+    /* --equal-bg: #64a6f1; */
+    --equal-bg: #95bff0;
+    --button-darker-bg: #ebebeb;
     --pr-text-color: #0d101a;
     --sc-text-color: #43495c;
-    --clear-all-bg: #da2d2d;
-    --clear-cur-bg: #da562f;
+    /* --clear-all-bg: #e23f3f;
+    --clear-cur-bg: #f7734b; */
+    --clear-all-bg: #eb8484;
+    --clear-cur-bg: #eea18a;
+    --erase-bg: #e7db96;
 
-    --lavender-light: #E7E6F7;
+    /* --lavender-light: #E7E6F7;
     --lavender-dark: #C6D2ED;
     --purple-pale: #E3D0D8;
     --rose-quartz: #AEA3B0;
-    --pink-dark: #827081;
+    --pink-dark: #827081; */
 
     --space-1: 8px;
     --space-2: 16px;
@@ -26,11 +31,6 @@
     --font-s-1: 12px;
     --font-s-2: 16px;
     --font-s-3: 24px;
-
-    /* --lighter: #FEFEFA;
-    --light: #FFFFF0;
-
-    --green-light: #E9FFDB; */
 }
 
 html {
@@ -49,13 +49,20 @@ button {
     background-color: var(--calc-bg);
     color: var(--pr-text-color);
 
-    border: 1px solid var(--calc-border);
+    border: 1px dashed var(--calc-border);
     border-radius: 4px;
 
     min-width: 3.6rem;
     height: 3.6rem;
 
     transition: 100ms ease;
+}
+
+/* button.clear-all,
+button.clear-current,
+button.erase, */
+button.operation {
+    background-color: var(--button-darker-bg);
 }
 
 button.equal {
@@ -70,8 +77,13 @@ button.clear-current {
     background-color: var(--clear-cur-bg);
 }
 
+button.erase {
+    background-color: var(--erase-bg);
+}
+
 button:hover {
     transform: scale(1.05);
+    border-style: solid;
     box-shadow: 0 0 4px 1px #999999;
 }
 
@@ -105,6 +117,7 @@ button:active {
 
 .last-operation {
     min-height: 1rem;
+    user-select: none;
     font-family: inherit;
     font-size: var(--font-s-1);
     font-weight: 200;
@@ -112,6 +125,7 @@ button:active {
 }
 
 .current-input {
+    user-select: none;
     font-family: inherit;
     font-size: var(--font-s-3);
     font-weight: 700;
